css/styles.css
html
{
	height: 100%;
}
body
{
    background-color: #FFFFFF;
    color: #777777;
    font-family: 'Open Sans', sans-serif;
    font-weight: lighter;
    height: 100%;
    position: relative;
}
h1
{
	margin-bottom: 30px;
	margin-top: 0px;
	text-align: center;
}
ul
{
	list-style: none;
}
/************* Main navbar page start ***********All****/
#main-nav
{
	background-color: #4585A1;
	color: #FFFFFF;
	height: 50px;
	padding-left: 10%;
	padding-right: 10%;
	position: relative;
}
#main-nav > a > img
{
	display: inline-block;
	height: 20px;
	left: 15%;
	position: absolute;
	top: 15px;
	width: auto;
}
.navbar-default,
.navbar-inverse
{
    background-color: #4585A1;
    color: #FFFFFF;
    width: 100%;
}
.navbar-inverse .navbar-toggle,
.navbar-inverse .navbar-toggle:focus
{
	background-color: #4585A1;
}
.navbar-inverse .navbar-toggle:hover
{
	background-color: #333333;
}
.navbar-default .navbar-nav > .disabled > a,
.navbar-default .navbar-nav > .disabled > a:hover,
.navbar-default .navbar-nav > .disabled > a:focus,
.navbar-default .navbar-nav > li > a,
.navbar-default .navbar-nav > li > a:focus,
.navbar-default .navbar-nav > li > a:hover,
.navbar-default .navbar-text
{
    color: #FFFFFF;
}
#main-nav > div > ul > li > a:hover
{
    background-color: #326077;
}
#main-nav > div > ul,
#main-nav > div > ul > li
{
	margin-left: 10px;
	margin-right: 10px;
}
#collapse
{
    background-color: #4585A1;
    margin-top: 50px;
}
#login-register
{
	border-top: 2px solid #FFFFFF;
	display: block;
	float: right;
}
/*** Hamburger Menu Collapse Start ***/
/*** Ensures the hamburger menu ***/
/*** remains collapse for all screen sizes ***/
.navbar-header {
	float: left;
}
.navbar-toggle {
	display: block;
}
.navbar-collapse {
	border-top: 1px solid transparent;
	box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
}
.navbar-collapse.collapse {
	display: none!important;
}
.navbar-collapse.collapse.in{
	display: block!important;
}
.navbar-nav {
	float: none!important;
	margin: 7.5px -15px;
}
.navbar-nav>li {
	float: none;
}
.navbar-nav>li>a {
	padding-top: 10px;
	padding-bottom: 10px;
}
/*** Hamburger Menu Collapse End ***/


/************* Main navbar page end *************All****/
/************* All pages page start *************All****/
#wrapper
{
	margin-top: 40px;
	min-height: 65%;
	width: 100%
}
.carousel .item
{
	height: 170px;
	margin: 0px auto;
	text-align: center;
}
.item h3
{
	margin-top: 0px;
}
.item img
{
	height: 170px;
	text-align: center;
}
.carousel-control
{
	opacity: 1;
}
.carousel-control.left,
.carousel-control.right
{
	background-image: none;
	background-repeat: none;
}
.turquois
{
	color: #326076;
}
/************* All pages page end ***************All****/
/************* Landing page start ***************All****/
#landing .divider.row div
{
	border-bottom: 2px solid #E5E5E5;
	margin-bottom: 10px;
	margin-top: 10px;
}
#landing .row img
{
	height: 170px;
}
#main-fitbit > div,
#main-recipes > div,
#main-groceries > div
{
	padding-left: 0px;
	padding-right: 0px;
}
#carousel-recipes .item
{
	background-color: #E2EEF4;
	padding-bottom: 23px;
	padding-top: 23px;
}
#carousel-recipes .item img
{
	height: 124px;
	text-align: left;
}
#carousel-recipes p,
#carousel-recipes h3
{
	text-align: left;
}
#carousel-recipes h4
{
	font-size: 13px;
	text-align: left;
}
#carousel-groceries .item
{
	margin-left: auto;
	margin-right: auto;
	width: 98%;
}
#carousel-groceries ul
{
	float: left;
	margin-right: 15px;
	max-width: 28%;
	min-width: 28%;
}
#carousel-groceries ul li
{
	background-image: url('../images/icon-checkmark.png');
	background-repeat: no-repeat;
	height: 26px;
	line-height: 26px;
	margin-bottom: 5px;
	overflow: hidden;
	padding-left: 30px;
	text-align: left;
}
/************* Landing page end *****************All****/
/************* Deals page start *****************All****/
#deals .divider.row div
{
	border-bottom: 2px solid #E5E5E5;
	margin-bottom: 10px;
	margin-top: 10px;
}
#deals .row
{
	margin-bottom: 20px;
}
#deals .row img
{
	height: 170px;
}
#deals-featured > div
{
	padding-left: 0px;
	padding-right: 0px;
}
#carousel-deals .item
{
	background-color: #E2EEF4;
	padding-bottom: 23px;
	padding-top: 23px;
}
#carousel-deals .item img
{
	height: 124px;
	text-align: left;
}
#carousel-deals p,
#carousel-deals h3
{
	text-align: left;
}
#carousel-deals h4
{
	font-size: 13px;
	text-align: left;
}
#deals .row.deal-list img
{
	border: 2px solid #E2EEF4;
	height: auto;
	width: 100%;
}
#deals .deal-details
{
	background-color: #E2EEF4;
	height: 30px;
	width: 100%;
}
#deals .deal-details span
{
	display: inline-block;
	overflow: hidden;
	padding-top: 5px;
	white-space: nowrap;
}
#deals .deal-details span.left
{
	float: left;
	padding-left: 2%;
	text-align: left;
	width: 60%;
}
#deals .deal-details span.right
{
	float: right;
	padding-right: 2%;
	text-align: right;
	width: 30%;
}
#deals .deal-wrapper-outer
{
	padding-top: 20px;
}
#deals .deal-wrapper-inner
{
	background-color: #E2EEF4;
	width: 100%;
}
/************* Deals page end *******************All****/
/************* Login/Register page start ********All****/
#login table,
#register table
{
	background-color: #E2EEF4;
}
#login input[type='email'],
#login input[type='password'],
#register input[type='email'],
#register input[type='password']
{
	background-color: #FFFFFF !important;
	text-align: center;
}
input:-webkit-autofill {
    -webkit-box-shadow: 0 0 0px 1000px white inset;
}
#login > div > div > table,
#register > div > div > table
{
	margin-bottom: 50px;
}
#login .table-responsive > .table > tbody > tr > td,
#register .table-responsive > .table > tbody > tr > td
{
	text-align: center;
}
#login .table-responsive > .table > tbody > tr > td.separate
{
	border-top: 1px solid #DDDDDD !important;
	height: 60px;
	padding-top: 60px;
}
#login .table-responsive > .table > tbody > tr > td > button,
#register .table-responsive > .table > tbody > tr > td > button
{
	color: #FFFFFF;
	height: 50px;
	margin: 0px auto;
	width: 95%;
}
/* ... */

